[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python3-cyberfusion-database-support"
version = "3.2.2"
description = "Library for MariaDB and PostgreSQL."
readme = "README.md"
authors = [
    { name = "Cyberfusion", email = "support@cyberfusion.io" },
]
dependencies = [
    "psycopg2-binary==2.9.11",
    "PyMySQL==1.1.2",
    "SQLAlchemy==2.0.46",
    "SQLAlchemy-Utils==0.41.1",
    "python3-cyberfusion-common~=2.12",
    "pydantic==2.12.5",
]

[project.urls]
"Source" = "https://github.com/CyberfusionIO/python3-cyberfusion-database-support"
